syntax = "proto3";
package test;

// A test message.
message Fake {
  oneof choice {
    // A string choice
    string field_one = 1;

    // An int choice
    int64 field_two = 2;
  }

  // Optional is oneof in proto
  optional string field_three = 3;

  // A normal field
  int32 field_four = 4;
}